--- a/index.html
+++ b/index.html
@@ -4,7 +4,52 @@
     <meta charset="utf-8">
     <title>Broadway Design</title>
   </head>
-  <body>
-
-  </body>
+<body>
+<div class="main_banner">
+  <h1>Broadway Design</h1>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#process">Process</a>
+    <a href="#work">Work</a>
+    <a href="#team">Team</a>
+    <a href="#contact">Contact</a>
+  </nav>
+</div>
+<div class="usps">
+  <div id="process">
+    <h2>Our Process</h2>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
+  </div>
+    <div id="identify">
+      <h2>Identify</h2>
+      <p>We focus on the most important details.</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
+    </div>
+    <div id="understand">
+      <h2>Understand</h2>
+      <p>We study our projects inside and out.</p>
+      <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
+    </div>
+    <div id="execute">
+      <h2>Execute</h2>
+      <p>We put everything we have into our work.</p>
+    </div>
+</div>
+<h3>Designed in New York</h3>
+<div id="work">
+  <h2>Portfolio</h2>
+  <p>Coming soon</p>
+</div>
+<div id="team">
+  <h2>Team</h2>
+  <p>We're hiring!</p>
+</div>
+<div id="contact">
+  <h2>Contact</h2>
+  <p>Phone: (555)-555-5555
+    <span>E-mail: test@example.com</span>
+    <span>Twitter: @test</span>
+  </p>
+</div>
+</body>
 </html>
