--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
   <head>
     <meta charset="utf-8">
     <title>Broadway Design</title>
+    <link rel="stylesheet" href="resources/css/master.css">
   </head>
 <body>
 <div class="main_banner">
   <h1>Broadway Design</h1>
   <nav>
-    <a href="#home">Home</a>
-    <a href="#process">Process</a>
-    <a href="#work">Work</a>
-    <a href="#team">Team</a>
-    <a href="#contact">Contact</a>
-  </nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#process">Process</a></li>
+      <li><a href="#work">Work</a></li>
+      <li><a href="#team">Team</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
 </div>
 <div class="usps">
   <div id="process">
@@ -21,21 +24,21 @@
     <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/identify.svg" alt="">
   </div>
     <div id="identify">
-      <h2>Identify</h2>
+      <h3>Identify</h3>
       <p>We focus on the most important details.</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/understand.svg" alt="">
     </div>
     <div id="understand">
-      <h2>Understand</h2>
+      <h3>Understand</h3>
       <p>We study our projects inside and out.</p>
       <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/execute.svg" alt="">
     </div>
     <div id="execute">
-      <h2>Execute</h2>
+      <h3>Execute</h3>
       <p>We put everything we have into our work.</p>
     </div>
 </div>
-<h3>Designed in New York</h3>
+<h4>Designed in New York</h4>
 <div id="work">
   <h2>Portfolio</h2>
   <p>Coming soon</p>
@@ -46,10 +49,19 @@
 </div>
 <div id="contact">
   <h2>Contact</h2>
-  <p>Phone: (555)-555-5555
-    <span>E-mail: test@example.com</span>
-    <span>Twitter: @test</span>
-  </p>
+    <p>Phone: (555)-555-5555</p>
+    <p>E-mail: test@example.com</p>
+    <p>Twitter: @test</p>
+</div>
+<div class="bottom">
+  <nav>
+      <span>© Broadway 2017</span>
+      <a href="#home">Home</a>
+      <a href="#process">Process</a>
+      <a href="#work">Work</a>
+      <a href="#team">Team</a>
+      <a href="#contact">Contact</a>
+  </nav>
 </div>
 </body>
 </html>
